# crash-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: config.py  errors.py
src/analysis/: correlation.py  engine.py  llm_router.py
src/analysis/prompts/: system.py  user.py
src/analysis/providers/: anthropic.py  base.py  deepseek.py
src/cli/: main.py
src/context/: git_blame.py  source_resolver.py
src/input/: elf_reader.py  format_detector.py  minidump_converter.py
src/models/: analysis.py  build.py  crash.py  symbol.py  version.py
src/output/: json_formatter.py  markdown_formatter.py  terminal.py
src/symbol/: deb_extractor.py  dsym_extractor.py  gdb_parser.py  gdb_wrapper.py  lldb_wrapper.py  protocol.py  resolver.py  rpm_extractor.py
src/utils/: logger.py  retry.py
tests/: conftest.py
tests/fixtures/: sample.core
tests/integration/: test_cli.py  test_engine.py  test_pipeline.py
tests/unit/: test_config.py  test_correlation.py  test_elf_reader.py  test_errors.py  test_format_detector.py  test_gdb_parser.py  test_git_blame.py  test_llm_router.py  test_models.py  test_output.py  test_prompts.py  test_resolver.py  test_retry.py
