[project]
name = "crash-ai"
version = "0.1.0"
description = "AI-powered core dump analysis system"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pyelftools>=0.31",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[project.scripts]
crash-ai = "src.cli.main:cli"
